--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	   </div>
 	   <p>
 	   Xirone is the new deal. Join the new finance generation. The comfortable, reliable, secured way. Insured by the NDDC your funds are safe with us. Xirone is not just a bank, it's a community.
-	   A community whose goal is to provide impeccable financial services to the public. It is funded by the public, for the public and with the public, so why not join our adventures and grow your wealth with us. From national currencies, to stable coins, to meme coins, to any coin, we got you coffered. Invest today in Xirone
+	   <p>  A community whose goal is to provide impeccable financial services to the public. It is funded by the public, for the public and with the public, so why not join our adventures and grow your wealth with us. From national currencies, to stable coins, to meme coins, to any coin, we got you coffered. Invest today in Xirone
+	   </p>
     <br>
 	<div class="useless">
 	<div class="text-1">
