--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div class="text-1">
 	<a href="sabi.html" target="_blank">
 	<i>
+        <p style="font-size:1.339vw; "
 	 Dive into the future with us today
 	</i>
 	</a>
