--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="actual-bar">
 	<br>
 	    <center>
-		<p style="font-size:36pt;">
+		<p style="font-size:2.604vw;">
 	    Welcome to Xirone
 	   </p>
 	   </center>
@@ -24,7 +24,7 @@
 	<div class="text-1">
 	<a href="sabi.html" target="_blank">
 	<i>
-        <p style="font-size:1.339vw; "
+        <p style="font-size:1.9vw; "
 	 Dive into the future with us today
 	</i>
 	</a>
