--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<div class="text-1">
 	<a href="sabi.html" target="_blank">
 	<i>
-        <p style="font-size:1.9vw; "
-	 Dive into the future with us today
+        <p style="font-size:1.9vw; ">
+	 Dive into the future with us today</p>
 	</i>
 	</a>
 	</div>
