--- a/index.html
+++ b/index.html
@@ -1,51 +1,142 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="script" href="script.js">
     </head>
     <body>
 	<div class="actual-bar">
 	<br>
+	<br>
 	    <center>
-		<p style="font-size:2.604vw;">
+		<p style="font-size:36pt;">
 	    Welcome to Xirone
 	   </p>
 	   </center>
 	   </div>
 	   <p>
 	   Xirone is the new deal. Join the new finance generation. The comfortable, reliable, secured way. Insured by the NDDC your funds are safe with us. Xirone is not just a bank, it's a community.
-	   <p>  A community whose goal is to provide impeccable financial services to the public. It is funded by the public, for the public and with the public, so why not join our adventures and grow your wealth with us. From national currencies, to stable coins, to meme coins, to any coin, we got you coffered. Invest today in Xirone
-	   </p>
+	   A community whose goal is to provide impeccable financial services to the public. It is funded by the public, for the public and with the public, so why not join our adventures and grow your wealth with us. From national currencies, to stable coins, to meme coins, to any coin, we got you coffered. Invest today in Xirone
     <br>
 	<div class="useless">
+		<br>
 	<div class="text-1">
 	<a href="sabi.html" target="_blank">
 	<i>
-        <p style="font-size:1.9vw; ">
-	 Dive into the future with us today</p>
+	 Dive into the future with us today
 	</i>
 	</a>
 	</div>
 	</div>
 	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<p>
+	<div class="animation">
+		A
+	</div>
 	<div class="image-1">
-	<p style=" font-size:16pt; ">Check out the news today</p>
+		<br>
+	<p style=" font-size:18pt; "><marquee scroll="left" colo="black">Check out the news today</marquee></p>
 	<ul>
 	<li><a href="sabi.html" target="_blank">Bitcoin price shot up by 400$ in the past 4 years.</a></li>
-	<li><a href="sabi.html" target="_self">New crypto coin, Dogs and Cat to launch November 2024</a><?li>
+	<br>
+	<li><a href="sabi.html" target="_self">New crypto coin, Dogs and Cat to launch November 2024</a></li>
+	<br>
 	<li><a href="#" target="_self">Telegram Coin Avacoin dissapoints thousands at launch</li></a>
+	<br>
 	<li><a href="#" target="_self">	Gold topping the stock market today</a></li>
+	<br>
+	<li><a href="contact.html" target="_blank">Zenith bank launches stock at $1 per share</a></li>
+	<br>
+	<li><a href="contact.html">Naira/Dollar price today shocking marketers</a></li>
 	</ul>
 	</div>
+	</p>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	Having doubts about investing your money? Well lets clear that.
+	<p>We know you work hard to earn that money and we know you want the most profit from it, we've all been there, we got you covered. Xirone is an insured company, meaning if the company is attacked and crashes, all your capital will be returned to you, and the probability of us having an attack is 0.02%. So your money is protected.
+	 <br>
+	 <br>
+		<p>Still having doubts?</p>
+	<p>Speak to our Customer service Assistants to answer your questions get you on the right track</p>
+	<p>+234704331183</p>
+	<p>+999046231896</p>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+		<p>Invest in Xirone projects today and make the most out of your money.</p>
+	<p>Our projects are:</p>
+	<p>
+	<div class="sectionz">
+		<a href="applications.html" target="_blank">
+			<img src="logo2.png" height="85px" width="153px">
+		</a>
+		<p>Stocks</p>
+	</div>
+	<div class="sectionz">
+		<a href="contact.html" target="_blank">
+			<img src="logo3.png" height="88px" width="97px">
+		</a>
+		<p>Crypto</p>
+	</div>
+	</p>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
 	<footer>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 	<div class="footer_contact">
 	<p>
 	<div class="footer_contact_form">
