--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<br>
 	<br>
 	    <center>
-		<p style="font-size:36pt;">
+		<p style="font-size:2.679vw;">
 	    Welcome to Xirone
 	   </p>
 	   </center>
@@ -46,7 +46,7 @@
 	</div>
 	<div class="image-1">
 		<br>
-	<p style=" font-size:18pt; "><marquee scroll="left" colo="black">Check out the news today</marquee></p>
+	<p style=" font-size:1.339vw; "><marquee scroll="left" colo="black">Check out the news today</marquee></p>
 	<ul>
 	<li><a href="sabi.html" target="_blank">Bitcoin price shot up by 400$ in the past 4 years.</a></li>
 	<br>
