--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
 	<p>
 	<div class="sectionz">
 		<a href="applications.html" target="_blank">
-			<img src="logo2.png" height="85px" width="153px">
+			<img src="logo2.png" height="13.643659711075442vw"
+				width="24.558587479935795vw">
 		</a>
 		<p>Stocks</p>
 	</div>
 	<div class="sectionz">
 		<a href="contact.html" target="_blank">
-			<img src="logo3.png" height="88px" width="97px">
+			<img src="logo3.png" height="14.125200642054574vw
+
+" width="15.569823434991974vw">
 		</a>
 		<p>Crypto</p>
 	</div>
@@ -158,11 +161,11 @@
 	<p>
 	<div class="img">
 	<a href="https://ig/rehmzphoria/" target="blank">
-	<img src="logoo.png" height="25px" width="25px"><img>
-	<img src="logoo.png" height="25px" width="25px"><img>
-	<img src="logoo.png" height="25px" width="25px"><img>
-	<img src="logoo.png" height="25px" width="25px"><img>
-	<img src="logoo.png" height="25px" width="25px"><img>
+	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
+	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
+	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
+	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
+	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
 	</a>
 	<p>Copyright: Xirone @2024</p>
 	<p>Tel:+234 704 333 1183</p>
