--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Make money online</title>
         <link rel="stylesheet" href="style.css">
         <link rel="script" href="script.js">
     </head>
@@ -111,16 +111,16 @@
 	<p>
 	<div class="sectionz">
 		<a href="applications.html" target="_blank">
-			<img src="logo2.png" height="6.82vw"
-				width="12.28vw">
+			<img src="logo2.png" height="3vw"
+				width="6vw">
 		</a>
 		<p>Stocks</p>
 	</div>
 	<div class="sectionz">
 		<a href="contact.html" target="_blank">
-			<img src="logo3.png" height="7.065vw
+			<img src="logo3.png" height="3.5vw
 
-" width="7.785vw">
+" width="3.9vw">
 		</a>
 		<p>Crypto</p>
 	</div>
@@ -163,11 +163,11 @@
 	<p>
 	<div class="img">
 	<a href="https://ig/rehmzphoria/" target="blank">
-	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
-	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
-	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
-	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
-	<img src="logoo.png" height="4.012841091492777vw" width="4.012841091492777vw"><img>
+	<img src="logoo.png" height="27vw" width=2vw"><img>
+	<img src="logoo.png" height="2vw" width="2vw"><img>
+	<img src="logoo.png" height="2vw" width="2"><img>
+	<img src="logoo.png" height="2" width="2"><img>
+	<img src="logoo.png" height="2" width="2vw"><img>
 	</a>
 	<p>Copyright: Xirone @2024</p>
 	<p>Tel:+234 704 333 1183</p>
