--- a/index.html
+++ b/index.html
@@ -163,11 +163,10 @@
 	<p>
 	<div class="img">
 	<a href="https://ig/rehmzphoria/" target="blank">
-	<img src="logoo.png" height="27vw" width=2vw"><img>
+	<img src="tik.png" height="27vw" width=2vw"><img>
 	<img src="logoo.png" height="2vw" width="2vw"><img>
-	<img src="logoo.png" height="2vw" width="2"><img>
-	<img src="logoo.png" height="2" width="2"><img>
-	<img src="logoo.png" height="2" width="2vw"><img>
+	<img src="tik.png" height="2vw" width="2"><img>
+	<img src="logoo.png" height="2vw" width="2vw"><img>
 	</a>
 	<p>Copyright: Xirone @2024</p>
 	<p>Tel:+234 704 333 1183</p>
