--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	<a href="https://ig/rehmzphoria/" target="blank">
 	<img src="tik.png" height="27vw" width=2vw"><img>
 	<img src="logoo.png" height="2vw" width="2vw"><img>
-	<img src="tik.png" height="2vw" width="2"><img>
+	<img src="tik.png" height="2vw" width="2vw"><img>
 	<img src="logoo.png" height="2vw" width="2vw"><img>
 	</a>
 	<p>Copyright: Xirone @2024</p>
