--- a/index.html
+++ b/index.html
@@ -111,16 +111,14 @@
 	<p>
 	<div class="sectionz">
 		<a href="applications.html" target="_blank">
-			<img src="logo2.png" height="3vw"
-				width="6vw">
+			<img src="logo2.png" height="300"
+				width="300">
 		</a>
 		<p>Stocks</p>
 	</div>
 	<div class="sectionz">
 		<a href="contact.html" target="_blank">
-			<img src="logo3.png" height="3.5vw
-
-" width="3.9vw">
+			<img src="logo3.png" height="300" width="300">
 		</a>
 		<p>Crypto</p>
 	</div>
@@ -163,9 +161,9 @@
 	<p>
 	<div class="img">
 	<a href="https://ig/rehmzphoria/" target="blank">
-	<img src="tik.png" height="27vw" width=2vw"><img>
+	<img src="tik1.png" height="2vw" width=2vw"><img>
 	<img src="logoo.png" height="2vw" width="2vw"><img>
-	<img src="tik.png" height="2vw" width="2vw"><img>
+	<img src="tik1.png" height="2vw" width="2vw"><img>
 	<img src="logoo.png" height="2vw" width="2vw"><img>
 	</a>
 	<p>Copyright: Xirone @2024</p>
